2 new endpoints (user rating and user's matchHistory)
